Test running the javapackager binary.